Add management for allow/deny files
Manage /etc/at.allow and remove /etc/at.deny as configured using pillar

--- a/pillar.example
+++ b/pillar.example
@@ -2,6 +2,10 @@ at:
   enabled: True   # Default
   lookup:       # Not needed, just if you want to use another at program
     pkg: 'at'
+  use_allow: True
+  use_deny: False
+  allow:
+    - root
   jobs:
     job1:
       type: 'present' # Default
